/cp 2013-02-15  Jonathan Wakely  <jwakely.gcc@gmail.com> 	    Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/51242
	* decl2.c (grokbitfield): Allow scoped enumeration types.

/testsuite
2013-02-15  Jonathan Wakely  <jwakely.gcc@gmail.com>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51242
	* g++.dg/cpp0x/enum23.C: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196100 138bc75d-0d04-0410-961f-82ee72b054a4